# LearnOpenGL

./: .gitignore  App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  GeometryGenerator.cpp  GeometryGenerator.h  IndicesBuffer.cpp  IndicesBuffer.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Model.h~  README.md  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  frag.shader  glad.c  help.cpp  help.h  light.h  main.cpp  vert.shader
.cache/clangd/index/: App.cpp.2D2277C07C0203DF.idx  App.h.D7B64024330DFB2C.idx  glad.c.D147E1ACD0FC8BB7.idx  glad.h.1C4A1CDB2F8F13E0.idx  glfw3.h.9AA588201F31F634.idx  khrplatform.h.EF1201EE9B67D78B.idx  main.cpp.075A43D13AB8BE44.idx
3rdlib/include/glad/: glad.h
3rdlib/lib/: assimp.lib  glfw3.lib
shaders/: color_frag.shader  color_vert .shader  depth_frag.shader  frag.shader  framebuffer_frag.shader  framebuffer_screen_frag.shader  framebuffer_screen_vert.shader  framebuffer_vert.shader  lightfrag.shader  lightvert.shader  model_frag.shader  model_vert.shader  normal_frag.shader  normal_ge.shader  normal_parallax_frag.shader  normal_parallax_vert.shader  normal_vert.shader  outline_frag.shader  outline_vert.shader  reflect_refraction_frag.shader  reflect_refraction_vert.shader  rock_vert.shader  shadow_map_frag.shader  shadow_map_vert.shader  shadow_tex_frag.shader  shadow_tex_geo.shader  shadow_tex_vert.shader  skybox_frag.shader  skybox_vert.shader  texture_frag.shader  texture_vert.shader  transparent_frag.shader  transparent_vert.shader  vert.shader
